--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-native": "0.67.2"
+    "react-native": "0.67.2",
+    "react-native-webview": "^11.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
