--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "react": "17.0.2",
     "react-native": "0.67.2",
     "react-native-webview": "^11.17.1"
